--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -1,45 +1,154 @@
-body{
-    background-color:rgb(110,110,110);
-    
+/*Αρρχικοποίηση μεταβλητής για το βασικό χρώμα που θα χρησιμοποιηθεί στις ιστοσελίδες*/
+:root {
+    --blue: #5b9faa;
 }
 
-h1{
+/* Αφαίρεση του κενού μεταξύ των άκρων και του viewport του περιεχομένου του website */
+body{
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+/* Σταθερό header με το όνομα της ιστοσελίδας μας, όσο σκολλάρουμε και πλοηγούμαστε */
+header {
+    height: 5em;
+    width: 100%;
+    background-color: var(--blue);
+    background: linear-gradient(var(--blue), white);
+    position: fixed;
+    top: 0;
+}
+
+/* Το main content θα ρίσκεται ακριβώς κάτω από το header για να μην υπάρχει επικάλυψη */
+main {
+    margin-top: 7em;
+}
+
+/* Τοποθέτηση της επικεφαλίδας του header στο κέντρο */
+header h1 {
+    text-align: center;
+    text-shadow: none;
+}
+
+/* Αφαίρεση της γραμμής του a href από την επικεφαλίδα του header */
+header a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/* Στιλ στην επικεφαλίδα του header όταν ο χρήστης βάζει το ποντίκι πάνω από αυτήν, για να πλοηγηθεί στην αρχική οθόνη index.html */
+header a:hover {
+    color: #f1f9fc;
+    text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
+}
+
+.product-name {
+    text-align: center;
+}
+
+.product-img {
+    display: block;
+    float: left;
+    margin-left: 15%;
+}
+
+
+
+.product-info {
+    margin-top: 5%;
+    margin-left: 50%;
+    margin-right: 20%;
+    /*margin-inline-start: 50%;*/
+}
+
+.checked {
+    color: orange;
+}
+
+.s {
+    clear: both;
+}
+
+
+/* Περίγραμμα για το border των article που περιέχουν αναλυτική περιγραφή για τις συσκευές μας (πχ για οθόνη, μπαταρία κλπ) */
+.component-description {
+    border: 1px solid var(--blue);
+    height: 400px;
+}
+
+/* Διάταξη των εικόνων που βρίσκονται στα article που περιέχουν αναλυτική περιγραφή για τις συσκευές μας στα αριστερά, έτσι ώστε
+να μπει η περιγραφή τους δίπλα και όχι από κάτω */
+.component-description img {
+    float: left;
+    margin-left: 50px;
+    margin-right: 50px;
+    display:block;
+}
+
+/* Κεντρική στοίχιση κειμένου και μικρή απόταση από δεξιά*/
+.component-description p {
+    text-align: center;
+    margin-right: 50px;
+}
+
+/* Στιλ παραγράφων με σκίαση*/
+p {
+    color: black;
+    font-family: "Verdana", sans-serif;
+    text-shadow: 0px 1px ;
+}
+
+/* Στιλ κριτικών προϊόντων.*/
+.review {
+    color: black;
+    font-weight:lighter;
+    font-style: italic;
+}
+
+.component-description h4 {
+    color:var(--blue);
+    font-style: italic;
+    text-shadow: 2px 1px  rgb(0, 0, 0);
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.component-description pre {
+    text-align: center;
+}
+
+/*h1{
     color: #ffffff;
     font-family: "Copperplate", fantasy;
     font-style:italic;
     font-weight: lighter;
-    text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #baff39, 1px 1px 0 #000;
-  }
+    text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
+  }*/
 
-h2,h3,h4,h5{
+/*h2,h3,h4,h5{
     color:rgb(186,255,57);
     font-family: "Copperplate", fantasy;
     font-style:italic;
     font-weight: lighter;
     text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #f8f8f7, 1px 1px 0 #000;
-}
+}*/
 
-p{
-    color:#fafdda;
-    font-family: "Verdana", sans-serif;
-    font-weight:lighter;
-    text-shadow: 2px 2px  rgb(0, 0, 0);
-}
 li{
-    color:#fafdda;
+    color:#618a47;
     font-family: "Verdana", sans-serif;
     font-weight:lighter;
-    text-shadow: 2px 2px  rgb(0, 0, 0);
+    text-shadow: 0.5px 0.5px  rgb(0, 0, 0);
 }
 
-a{
-    color: aquamarine;
+/*main a{
+    color: rgb(186,255,200);
     font-family: "Verdana", sans-serif;
     font-weight:lighter;
-    text-shadow: 2px 2px  rgb(0, 0, 0);
-}
+    text-shadow: 1px 1px rgb(0, 0, 0);
+}*/
 
-legend{
+/*legend{
     color:rgb(186,255,57);
     font-family: "Verdana", sans-serif;
     font-weight:lighter;
@@ -77,10 +186,10 @@ ph{
     font-size: larger;
     text-shadow: 2px 2px  rgb(0, 0, 0);
     
-}
+}*/
 h6,b{
-    color:#fafdda;
+    color: #aa665b;
     font-family: "Verdana", sans-serif;
     font-style: italic;
-    text-shadow: 2px 2px  rgb(0, 0, 0); 
+    text-shadow: 0px 1px ;
 }
