--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -1,6 +1,6 @@
 /*Αρρχικοποίηση μεταβλητής για το βασικό χρώμα που θα χρησιμοποιηθεί στις ιστοσελίδες*/
 :root {
-    --blue: #5b9faa;
+    --blue: #127b88;
 }
 
 /* Αφαίρεση του κενού μεταξύ των άκρων και του viewport του περιεχομένου του website */
@@ -18,6 +18,9 @@ header {
     background: linear-gradient(var(--blue), white);
     position: fixed;
     top: 0;
+    border-bottom: 1px;
+    border-bottom-color: #a9ccd2;
+    border-bottom-style: solid;
 }
 
 /* Το main content θα ρίσκεται ακριβώς κάτω από το header για να μην υπάρχει επικάλυψη */
@@ -27,19 +30,24 @@ main {
 
 /* Τοποθέτηση της επικεφαλίδας του header στο κέντρο */
 header h1 {
+    color: #ffffff;
+    font-family: "Copperplate", fantasy;
+    font-style:italic;
+    font-weight: lighter;
+    text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
     text-align: center;
     text-shadow: none;
 }
 
 /* Αφαίρεση της γραμμής του a href από την επικεφαλίδα του header */
 header a{
-    color: #ffffff;
+    color: #882012;
     text-decoration: none;
 }
 
 /* Στιλ στην επικεφαλίδα του header όταν ο χρήστης βάζει το ποντίκι πάνω από αυτήν, για να πλοηγηθεί στην αρχική οθόνη index.html */
 header a:hover {
-    color: #f1f9fc;
+    color: #882012;
     text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
 }
 
@@ -53,8 +61,6 @@ header a:hover {
     margin-left: 15%;
 }
 
-
-
 .product-info {
     margin-top: 5%;
     margin-left: 50%;
@@ -66,15 +72,52 @@ header a:hover {
     color: orange;
 }
 
-.s {
+.product-description {
     clear: both;
+    margin-top: 15%;
 }
 
+.product-description h2 {
+    text-align: center;
+}
+
+iframe {
+    display: block;
+    float: right;
+    margin-right: 10%;
+}
+
+.description {
+    margin-left: 10%;
+    margin-right: 50%;
+}
+
+q {
+    font-size: larger;
+}
+
+.reviews {
+    margin-top: 5%;
+}
+
+.review {
+    margin-right: 20%;
+    margin-left: 20%;
+    border-top: 1px;
+    border-top-style: solid;
+}
+
+.reviews > p, .reviews > h2 {
+    text-align: center;
+}
 
 /* Περίγραμμα για το border των article που περιέχουν αναλυτική περιγραφή για τις συσκευές μας (πχ για οθόνη, μπαταρία κλπ) */
 .component-description {
-    border: 1px solid var(--blue);
-    height: 400px;
+    margin-top: 15%;
+    clear: both;
+    border-top: 2px;
+    border-top-style: solid;
+    border-color: var(--blue);
 }
 
 /* Διάταξη των εικόνων που βρίσκονται στα article που περιέχουν αναλυτική περιγραφή για τις συσκευές μας στα αριστερά, έτσι ώστε
@@ -116,6 +159,32 @@ p {
 
 .component-description pre {
     text-align: center;
+}
+
+.specifications {
+    clear: both;
+    margin-top: 20%;
+}
+
+#specifications {
+    margin: auto;
+    
+}
+
+.one {
+    background-color: rgba(0, 0, 0, 0.136);
+}
+
+table {
+    border: 1px solid rgba(0, 0, 0, 0.235);
+}
+
+caption{
+    color: black;
+    font-family: "Verdana", sans-serif;
+    font-weight: bolder;
+    font-size: larger;
+    text-shadow: 1px 0px  gray;
 }
 
 /*h1{
@@ -187,7 +256,8 @@ ph{
     text-shadow: 2px 2px  rgb(0, 0, 0);
     
 }*/
-h6,b{
+
+b{
     color: #aa665b;
     font-family: "Verdana", sans-serif;
     font-style: italic;
