--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -187,6 +187,28 @@ caption{
     text-shadow: 1px 0px  gray;
 }
 
+/*-----------------------------------------------*/
+
+#contact-form {
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+form legend {
+    font-family: "Copperplate", fantasy;
+    font-style:italic;
+    font-size: 1.2em;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li{
+    font-family: "Verdana", sans-serif;
+    font-weight:lighter;
+}
+
 /*h1{
     color: #ffffff;
     font-family: "Copperplate", fantasy;
@@ -203,12 +225,7 @@ caption{
     text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #f8f8f7, 1px 1px 0 #000;
 }*/
 
-li{
-    color:#618a47;
-    font-family: "Verdana", sans-serif;
-    font-weight:lighter;
-    text-shadow: 0.5px 0.5px  rgb(0, 0, 0);
-}
+
 
 /*main a{
     color: rgb(186,255,200);
