Delete useless style

--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -55,6 +55,7 @@ header a:hover {
     text-align: center;
 }
 
+/* κενό μεταξύ των κατηγοριών*/
 .product-categories-div div {
     margin-bottom: 5em;
 }
@@ -214,8 +215,8 @@ table {
 /*-----------------------------------------------*/
 
 #contact-form {
+    width:50%;
     margin-left: 25%;
-    margin-right: 25%;
 }
 
 form legend {
@@ -273,6 +274,7 @@ b{
     font-style: italic;
     text-shadow: 0px 1px ;
 }
+
 .main_index {
     color:var(--blue);
     font-style: italic;
@@ -345,6 +347,7 @@ b{
     background-color:#a9ccd2;
 }
 
+/*Διαταξη της about us*/
 #about-us {
     text-align: center;
     margin-bottom: 3em;
