--- a/Exercise3/css/style.css
+++ b/Exercise3/css/style.css
@@ -6,7 +6,7 @@
 
 /* Σταθερό header με το όνομα της ιστοσελίδας μας, όσο σκολλάρουμε και πλοηγούμαστε */
 header {
-    /*width: 100%;*/
+    width: 100%;
     background-color: var(--blue);
     background: linear-gradient(var(--blue), white);
     border-bottom: 1px;
@@ -43,6 +43,7 @@ header a:hover {
 
 q {
     font-size: larger;
+    font-style: italic;
 }
 
 /* Στιλ παραγράφων με σκίαση*/
@@ -57,31 +58,6 @@ p {
     background-color: rgba(0, 0, 0, 0.136);
 }
 
-/*-----------------------------------------------*/
-
-#contact-form {
-    width: 50%;
-    margin-left: 25%;
-}
-
-form legend {
-    font-family: "Copperplate", fantasy;
-    font-style: italic;
-    font-size: 1.2em;
-}
-
-.field_set {
-    background: linear-gradient(#a9ccd28c, white);
-}
-
-ul {
-    list-style-type: none;
-}
-
-li {
-    font-family: "Verdana", sans-serif;
-    font-weight: lighter;
-}
 
 /*Στοίχιση για το κείμενο-label κάθε input της φόρμας*/
 label {
@@ -200,24 +176,6 @@ b {
     float: right;
 }
 
-.button {
-    background-color: #882012;
-    padding: 10px 30px;
-    border-radius: 8px;
-    font-size: 20px;
-    border: none;
-    color: white;
-    ;
-    font-style: italic;
-    text-align: center;
-    margin-top: 10px;
-}
-
-.button:hover {
-    background-color: #882012;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
-}
-
 
 /*--------------------------------------------------------------------------------------*/
 
@@ -234,7 +192,7 @@ html,body {
     margin-left: 0;
     margin-right: 0;
     display: grid;
-    grid-template-rows: 80px 1fr 100px;
+    grid-template-rows:80px 1fr 100px;
 }
 
 footer p {
@@ -246,8 +204,8 @@ footer a {
 }
 
 footer {
-    clear: both;
     background-color: rgb(61, 61, 61);
+    grid-row: 3/4;
 }
 
 /*Grid layout for products -smartphones and earbuds-*/
@@ -266,7 +224,7 @@ footer {
     border-radius: 20px;
     padding: 10px;
     border-width: 1px;
-    border-color: #a9ccd245;
+    border-color: #a9ccd279;
     border-style: solid;
     background: #a9ccd209;
 }
@@ -293,6 +251,7 @@ footer {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
 }
 
+/*Χρήση Flex Layout για την διάταξη των κατηγοριών αι της λίστας κάθε κατηγορίας*/
 .category {
     display: flex;
     flex-direction: column;
@@ -304,9 +263,200 @@ footer {
     text-decoration-line: none;
 }
 
+/* Όταν βάζουμε το ποντίκι πάνω από κάποιο προϊόν ή κατηγορία αλλάζουμε το χρώμα */
 .category a:hover,
 .product-list a:hover {
     display: block;
-    background-color: #a9ccd245;
+    background-color: #a9ccd279;
     border-radius: 20px;
+}
+
+/*---------Grid για product info (timi, rating, image)---------*/
+.product-name {
+    text-align: center;
+}
+
+.product-info {
+    display: grid;
+    grid-template-columns: 3fr 2fr 1fr;
+    align-items: center;
+}
+
+.product-info > img {
+    justify-self: center;
+}
+
+.product-info > div {
+    justify-self: left;
+}
+
+/*-------------------------------------------------------------*/
+
+/*--------Flex, Grid για αναλυτική περιγραφή προϊόντος---------*/
+.product-description > h2 {
+    margin-top: 5em;
+}
+
+.product-description {
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+    align-items: center;
+}
+
+.description {
+    display: grid;
+    width: 80%;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.description  iframe {
+    justify-self: right;
+}
+
+.description p {
+    justify-self: left;
+}
+
+.component-description {
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 40px 1fr 1fr;
+    align-items: center;
+    border-width: 2px 0px 0px 0px;
+    border-style: solid;
+    border-color: var(--blue);
+}
+
+.component-description > h4 {
+    color:var(--blue);
+    font-style: italic;
+    text-shadow: 2px 1px  rgb(0, 0, 0);
+    text-align: center;
+    font-size: 1.5em;
+
+    grid-column: 1/3;
+    grid-row: 1/3/1/2;
+}
+
+.component-description > img {
+    grid-column: 1/2;
+    grid-row: 2/4;
+}
+
+.component-description > pre {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.component-description > p {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    align-self: start;
+}
+
+/*Ανά 2 εικόνες αλλάζουμε και τη θέση της εικόνας από δεξια-αριστερα και αντιστροφα*/
+.component-description:nth-child(even) > img {
+    grid-column: 2/3;
+    justify-self: right;
+}
+
+.component-description:nth-child(even) > pre {
+    grid-column: 1/2;
+}
+
+.component-description:nth-child(even) > p {
+    grid-column: 1/2;
+}
+
+/*-------------------------------------------------------------*/
+
+/*--------------Flex για κριτικές--------------*/
+.reviews {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
+}
+
+.review {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top-width: 1px;
+    border-top-color: #000;
+    border-top-style: solid;
+}
+
+/*-------------------------------------------------------------*/
+
+.specifications {
+    margin: auto;
+    margin-top: 10em;
+    margin-bottom: 10em;
+    width: 50%;
+}
+
+.specifications h2 {
+    text-align: center;
+}
+
+/*-------------------------------------------------------------*/
+
+/*------------------Flex για βιογραφικό------------------------*/
+.bio {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+/*-------------------------------------------------------------*/
+
+/*----------------Flex for the form - cotact us----------------*/
+
+#contact-form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+    justify-items: center;
+}
+
+form legend {
+    font-family: "Copperplate", fantasy;
+    font-style: italic;
+    font-size: 1.2em;
+}
+
+.field_set {
+    background: linear-gradient(#a9ccd28c, white);
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    font-family: "Verdana", sans-serif;
+    font-weight: lighter;
+}
+
+.button {
+    background-color: #882012;
+    padding: 10px 30px;
+    border-radius: 8px;
+    font-size: 20px;
+    border: none;
+    color: white;
+    font-style: italic;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button:hover {
+    background-color: #882012;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
 }
