--- a/Exercise3/css/style.css
+++ b/Exercise3/css/style.css
@@ -78,7 +78,8 @@ b {
     text-shadow: 0px 1px;
 }
 
-.main_index {
+.index_paragr {
+    font-family: paragraphFont;
     color: var(--blue);
     font-style: italic;
     text-shadow: 2px 1px rgb(0, 0, 0);
@@ -176,23 +177,8 @@ b {
     float: right;
 }
 
-
-/*--------------------------------------------------------------------------------------*/
-
-/*Θέλουμε να καλύψουμε όλο το εύρος της οθόνης για σωστή τοποθέτηση footer,
-ανεξαρτήτως το περιεχόμενο κάθε ιστοσελίδας*/
-html,body {
-    width: 100%;
-    height: 100%;
-}
-
-/*Grid display for header - main - footer*/
-.body-grid-container {
-    margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
-    display: grid;
-    grid-template-rows:80px 1fr 100px;
+footer{
+    background-color: rgb(61, 61, 61);
 }
 
 footer p {
@@ -201,21 +187,6 @@ footer p {
 
 footer a {
     color: whitesmoke;
-}
-
-footer {
-    background-color: rgb(61, 61, 61);
-    grid-row: 3/4;
-}
-
-/*Grid layout for products -smartphones and earbuds-*/
-.product-list,
-.product-categories-div {
-    margin-top: 3em;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px 40px;
-    grid-auto-rows: max-content;
 }
 
 /*Χρωματισμός και στιλ των li στις κατηγορίες προϊόντων και στα προϊόντα.*/
@@ -251,11 +222,42 @@ footer {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
 }
 
-/*Χρήση Flex Layout για την διάταξη των κατηγοριών αι της λίστας κάθε κατηγορίας*/
-.category {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+form legend {
+    font-family: "Copperplate", fantasy;
+    font-style: italic;
+    font-size: 1.2em;
+}
+
+.field_set {
+    background: linear-gradient(#a9ccd28c, white);
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    font-family: "Verdana", sans-serif;
+    font-weight: lighter;
+}
+
+.button {
+    background-color: #882012;
+    padding: 10px 30px;
+    border-radius: 8px;
+    font-size: 20px;
+    border: none;
+    color: white;
+    font-style: italic;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button:hover {
+    background-color: #882012;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
 }
 
 .category a,
@@ -271,6 +273,96 @@ footer {
     border-radius: 20px;
 }
 
+.specifications {
+    margin: auto;
+    margin-top: 10em;
+    margin-bottom: 10em;
+    width: 50%;
+}
+
+.specifications h2 {
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+/*--------------------------------ASK 3-------------------------------------------*/
+
+/*Θέλουμε να καλύψουμε όλο το εύρος της οθόνης για σωστή τοποθέτηση footer,
+ανεξαρτήτως το περιεχόμενο κάθε ιστοσελίδας*/
+html,body {
+    width: 100%;
+    height: 100%;
+}
+
+/*Main Grid for the display it includes( header - main - footer)*/
+.body-grid-container {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    display: grid;
+    grid-template-rows:80px 1fr 100px;
+}
+
+/*Ορισμος οριων grid για το footer*/
+footer {
+    grid-row: 3/4;
+}
+
+
+
+/*----------------------------Flex, Grid στην index----------*/
+.main_index {
+    display: grid;
+    grid-template-rows: 1fr 2fr ;
+    align-items: center;
+}
+
+.index_paragr{
+    display: flex;
+    flex-direction: row;
+    margin-left: 80px;
+    margin-right: 80px;
+}
+
+.dropbtn{
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+   
+}
+/*-------------Flex, Grid στισ σελιδες products , smartphones and earbuds----------*/
+.product-list,
+.product-categories-div {
+    margin-top: 3em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px 40px;
+    grid-auto-rows: max-content;
+}
+
+/*Χρήση Flex Layout για την διάταξη των κατηγοριών και της λίστας κάθε κατηγορίας*/
+.category {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*---------------------------------------------------------------------------*/
+
+
+
+/*----------------------------Flex, Grid στισ σελιδες s22 και buds prο----------*/
+
+
+
 /*---------Grid για product info (timi, rating, image)---------*/
 .product-name {
     text-align: center;
@@ -284,13 +376,12 @@ footer {
 
 .product-info > img {
     justify-self: center;
+    
 }
 
 .product-info > div {
     justify-self: left;
 }
-
-/*-------------------------------------------------------------*/
 
 /*--------Flex, Grid για αναλυτική περιγραφή προϊόντος---------*/
 .product-description > h2 {
@@ -371,8 +462,6 @@ footer {
     grid-column: 1/2;
 }
 
-/*-------------------------------------------------------------*/
-
 /*--------------Flex για κριτικές--------------*/
 .reviews {
     display: flex;
@@ -391,29 +480,31 @@ footer {
     border-top-style: solid;
 }
 
-/*-------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------*/
 
-.specifications {
-    margin: auto;
-    margin-top: 10em;
-    margin-bottom: 10em;
-    width: 50%;
+
+
+
+/*----------------------------Flex, Grid στισ σελιδες about us και contact----------*/
+.about-us_main{
+    display: grid;
+    grid-template-rows: 1fr 3fr ;
+    align-items: center;
 }
-
-.specifications h2 {
-    text-align: center;
-}
-
-/*-------------------------------------------------------------*/
-
 /*------------------Flex για βιογραφικό------------------------*/
 .bio {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
-/*-------------------------------------------------------------*/
 
+.info{
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 70px;
+}
 /*----------------Flex for the form - cotact us----------------*/
 
 #contact-form {
@@ -424,39 +515,16 @@ footer {
     justify-items: center;
 }
 
-form legend {
-    font-family: "Copperplate", fantasy;
-    font-style: italic;
-    font-size: 1.2em;
+.warning{
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
-.field_set {
-    background: linear-gradient(#a9ccd28c, white);
+/*--------------Χρηση κανονα font face για το κειμενο στην index--------------*/
+@font-face {
+    font-family: paragraphFont;
+    src: url(../RobotoMedium-Owv4.ttf);
 }
-
-ul {
-    list-style-type: none;
-}
-
-li {
-    font-family: "Verdana", sans-serif;
-    font-weight: lighter;
-}
-
-.button {
-    background-color: #882012;
-    padding: 10px 30px;
-    border-radius: 8px;
-    font-size: 20px;
-    border: none;
-    color: white;
-    font-style: italic;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.button:hover {
-    background-color: #882012;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
-}
+/*-------------------------------------------------------------*/
