--- a/Exercise4/css/style.css
+++ b/Exercise4/css/style.css
@@ -108,10 +108,10 @@ b {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: absolute;
+    position:absolute;
     display: inline-block;
-    margin: 0;
-    top: 40%;
+    margin-top: 5%;  /* button position fixed*/
+    /* top: 40%; button position fixed*/
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -121,7 +121,7 @@ b {
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
-    position: absolute;
+    position:inherit;
     background-color: #f1f1f1;
     min-width: 200px;
     border-radius: 8px;
@@ -152,7 +152,6 @@ b {
 .dropdown:hover .dropbtn {
     background-color: #a9ccd2;
 }
-
 /*Διαταξη της about us*/
 #about-us {
     text-align: center;
@@ -160,13 +159,17 @@ b {
 }
 
 .bio-individual {
-    width: 45%;
+    /*width: 45%;      put it back in for the brake (left for ask 4)*/ 
     display: inline-block;
     text-align: center;
 }
 
 .bio-individual>img {
     border-radius: 50%;
+}
+
+#dimitrisEvangelou {
+    margin-bottom: 10%;
 }
 
 #dimitrisEvangelou {
@@ -272,29 +275,21 @@ li {
     background-color: #a9ccd279;
     border-radius: 20px;
 }
-
 .specifications {
     margin: auto;
     margin-top: 10em;
     margin-bottom: 10em;
     width: 50%;
 }
-
 .specifications h2 {
     text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-/*--------------------------------ASK 3-------------------------------------------*/
-
+/*--------------Χρηση κανονα font face για το κειμενο στην index--------------*/
+@font-face {
+    font-family: paragraphFont;
+    src: url(../RobotoMedium-Owv4.ttf);
+}
+/*-------------------------------------------------------------------------*/
 /*Θέλουμε να καλύψουμε όλο το εύρος της οθόνης για σωστή τοποθέτηση footer,
 ανεξαρτήτως το περιεχόμενο κάθε ιστοσελίδας*/
 html,body {
@@ -302,48 +297,57 @@ html,body {
     height: 100%;
 }
 
+
+
+
+
+
+
+
+
+/*--------------------------------ASK 4 (1 COLUMN)-------------------------------------------*/
+
 /*Main Grid for the display it includes( header - main - footer)*/
 .body-grid-container {
     margin-top: 0;
     margin-left: 0;
     margin-right: 0;
     display: grid;
-    grid-template-rows:80px 1fr 100px;
+    grid-template-rows:15% 1fr 15%;  /*ask 4 precenteges*/
 }
 
 /*Ορισμος οριων grid για το footer*/
 footer {
-    grid-row: 3/4;
+    grid-row: 3fr 4fr;/*ask 4 χρηση fr*/
 }
-
-
 
 /*----------------------------Flex, Grid στην index----------*/
 .main_index {
     display: grid;
-    grid-template-rows: 1fr 2fr ;
+    grid-template-rows: 1fr 2fr ;/*ask 4 χρηση fr*/
     align-items: center;
 }
 
 .index_paragr{
     display: flex;
     flex-direction: row;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-left: 10%; /*ask 4 precenteges*/
+    margin-right: 10%; /*ask 4 precenteges*/
 }
 
 .dropbtn{
     display: flex;
     flex-direction: row;
-    margin-top: 50px;
+    margin-top: 50%; /*ask 4 precenteges*/
    
 }
+
 /*-------------Flex, Grid στισ σελιδες products , smartphones and earbuds----------*/
 .product-list,
 .product-categories-div {
-    margin-top: 3em;
+    margin-top: 3%;/*ask 4 precenteges*/
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;/*ask 4 χρηση fr για 1 column*/     
     grid-gap: 40px 40px;
     grid-auto-rows: max-content;
 }
@@ -355,28 +359,25 @@ footer {
     align-items: center;
 }
 
-/*---------------------------------------------------------------------------*/
-
-
-
 /*----------------------------Flex, Grid στισ σελιδες s22 και buds prο----------*/
-
-
-
 /*---------Grid για product info (timi, rating, image)---------*/
 .product-name {
     text-align: center;
 }
 
+.product-img{
+    max-width: 100%;/* ask4 χρηση του κανονα max-width*/ 
+}
+
 .product-info {
     display: grid;
-    grid-template-columns: 3fr 2fr 1fr;
+    grid-template-columns: minmax(auto,auto); /* ask4 singl χρηση της minmax*/ 
     align-items: center;
 }
 
 .product-info > img {
     justify-self: center;
-    
+    max-width: 100%;/* ask4 χρηση του κανoνα max-width*/ 
 }
 
 .product-info > div {
@@ -391,19 +392,20 @@ footer {
 .product-description {
     display: flex;
     flex-direction: column;
-    row-gap: 50px;
+    row-gap: 30%; /*ask 4 precenteges*/
     align-items: center;
 }
 
 .description {
     display: grid;
-    width: 80%;
-    grid-template-columns: 1fr 1fr;
+    width: 80%; /*ask 4 precenteges*/
+    grid-template-columns: minmax(auto,auto);/* ask4 χρηση minmax*/ 
     align-items: center;
 }
 
 .description  iframe {
     justify-self: right;
+    max-width: 100%;/* ask4 χρηση του κανονα max-width*/ 
 }
 
 .description p {
@@ -411,12 +413,12 @@ footer {
 }
 
 .component-description {
-    width: 80%;
+    width: 80%; /*ask 4 precenteges*/
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 40px 1fr 1fr;
+    grid-template-columns:minmax(auto,auto);/* ask4 χρηση minmax*/  
+    /*grid-template-rows: 1fr 1fr 1fr;   (δημιουργει τεραστια κενα στην μονη στηλη*/ 
     align-items: center;
-    border-width: 2px 0px 0px 0px;
+    border-width: 1px 0px 0px 0px;
     border-style: solid;
     border-color: var(--blue);
 }
@@ -428,38 +430,25 @@ footer {
     text-align: center;
     font-size: 1.5em;
 
-    grid-column: 1/3;
-    grid-row: 1/3/1/2;
+    grid-column: 1fr;  /*ask 4 χρηση fr για 1 column*/
+    grid-row: 1fr 3fr 1fr 2fr; /*ask 4 χρηση fr*/
 }
 
 .component-description > img {
-    grid-column: 1/2;
-    grid-row: 2/4;
+     grid-column: 1fr;  /*ask 4 χρηση fr για 1 column*/
+     grid-row: 2fr 4fr; /*ask 4 χρηση fr*/
+    max-width: 100%;/* ask4 χρηση του κανωνα max-width*/ 
 }
 
 .component-description > pre {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-column: 1fr;   /*ask 4 χρηση fr για 1 column*/
+    grid-row: 2fr 3fr; /*ask 4 χρηση fr*/
 }
 
 .component-description > p {
-    grid-column: 2/3;
-    grid-row: 3/4;
+    /*grid-column: 2/3;*/
+    grid-row: 3fr 4fr;/*ask 4 χρηση fr*/
     align-self: start;
-}
-
-/*Ανά 2 εικόνες αλλάζουμε και τη θέση της εικόνας από δεξια-αριστερα και αντιστροφα*/
-.component-description:nth-child(even) > img {
-    grid-column: 2/3;
-    justify-self: right;
-}
-
-.component-description:nth-child(even) > pre {
-    grid-column: 1/2;
-}
-
-.component-description:nth-child(even) > p {
-    grid-column: 1/2;
 }
 
 /*--------------Flex για κριτικές--------------*/
@@ -467,11 +456,11 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 10px;
+    row-gap: 10%;  /*ask 4 precenteges*/
 }
 
 .review {
-    width: 60%;
+    width: 60%; /*ask 4 precenteges*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -482,35 +471,33 @@ footer {
 
 /*---------------------------------------------------------------------------------------------------*/
 
-
-
-
 /*----------------------------Flex, Grid στισ σελιδες about us και contact----------*/
 .about-us_main{
     display: grid;
-    grid-template-rows: 1fr 3fr ;
+    grid-template-rows: 1fr 3fr ; /*ask 4 χρηση fr*/
     align-items: center;
 }
+
 /*------------------Flex για βιογραφικό------------------------*/
 .bio {
     display: flex;
-    flex-direction: row;
+    flex-direction: column; /*row for in ask 3*/
     justify-content: space-evenly;
 }
 
 .info{
     display: flex;
     flex-direction: row;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 70px;
+    margin-left: 10%;  /*ask 4 precenteges*/
+    margin-right: 10%;  /*ask 4 precenteges*/
+    margin-bottom: 10%; /*ask 4 precenteges*/
 }
 /*----------------Flex for the form - cotact us----------------*/
 
 #contact-form {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 50%;/*ask 4 precenteges*/
     margin: auto;
     justify-items: center;
 }
@@ -518,13 +505,197 @@ footer {
 .warning{
     display: flex;
     flex-direction: row;
-    margin-left: 30pxz;
-    margin-right: 30px;
+    margin-left: 10%; /*ask 4 precenteges*/
+    margin-right: 10%;  /*ask 4 precenteges*/
 }
 
-/*--------------Χρηση κανονα font face για το κειμενο στην index--------------*/
-@font-face {
-    font-family: paragraphFont;
-    src: url(../RobotoMedium-Owv4.ttf);
+
+
+/*--------------------------------ASK 4 (2 COLUMN με χρηση media rule)-------------------------------------------*/
+
+
+/*--------------------------------tablets, 768px and up-------------------------------------------*/
+@media screen and (min-width: 768px) {
+ 
+    .product-list,
+    .product-categories-div {
+        margin-top: 3%;/*ask 4 precenteges*/
+        display: grid;
+        grid-template-columns: 1fr 1fr;/*ask 4 χρηση fr για 2 column*/     
+        grid-gap: 40px 40px;
+        grid-auto-rows: max-content;
+    }
+
+    .product-info {
+        display: grid;
+        grid-template-columns: 2fr 1fr; /* ask4 χρηση fr για 2 column*/ 
+        align-items: center;
+    }
+
+    .description {
+        display: grid;
+        width: 80%; /*ask 4 precenteges*/
+        grid-template-columns: 1fr 1fr;/* ask4 χρηση fr για 2 column*/ 
+        align-items: center;
+    }
+
+    .component-description {
+        width: 80%; /*ask 4 precenteges*/
+        display: grid;
+        grid-template-columns:1fr 1fr;/* ask4 χρηση fr για 2 column*/  
+        grid-template-rows: 10% 1fr 1fr;  /*ask 4 precenteges και fr*/
+        align-items: center;
+        border-width: 1px 0px 0px 0px;
+        border-style: solid;
+        border-color: var(--blue);
+    }
+    
+    .component-description > h4 {
+        color:var(--blue);
+        font-style: italic;
+        text-shadow: 2px 1px  rgb(0, 0, 0);
+        text-align: center;
+        font-size: 1.5em;
+    
+        grid-column: 1/2;  /*ask 4 χρηση 2 column και grid-column-start/end*/
+        grid-row: 1fr 3fr 1fr 2fr; /*ask 4 χρηση fr*/
+    }
+    
+    .component-description > img {
+        grid-column: 1/2;  /*ask 4 χρηση 2 column και grid-column-start/end*/
+        grid-row: 2/4;
+        max-width: 100%;/* ask4 χρηση του κανωνα max-width*/ 
+        justify-self: left;
+    }
+    
+    .component-description > pre {
+        grid-column: 2/3;   /*ask 4 χρηση 2 column και grid-column-start/end*/
+        grid-row: 2/3; /*ask 4 χρηση fr*/
+    }
+    
+    .component-description > p {
+        grid-column: 2/3;/*ask 4 χρηση 2 column και grid-column-start/end*/
+        grid-row: 3/4;
+        align-self: start;
+    }
+
+
+    /*Ανά 2 εικόνες αλλάζουμε και τη θέση της εικόνας από δεξια-αριστερα και αντιστροφα !!δεν γινεταi στo 1 column*/
+    .component-description:nth-child(even) > img {
+        grid-column: 2/3;/*ask 4 χρηση 2 column και grid-column-start/end*/
+        justify-self: right;
+    }
+
+    .component-description:nth-child(even) > pre {
+        grid-column: 1/2;/*ask 4 χρηση 2 column και grid-column-start/end*/
+    }
+
+    .component-description:nth-child(even) > p {
+        grid-column: 1/2;/*ask 4 χρηση 2 column και grid-column-start/end*/
+    }
+
+    .bio {
+        display: flex;
+        flex-direction: row; /*changed to row για τα 2 column */
+        justify-content: space-evenly;
+    }
+
 }
-/*-------------------------------------------------------------*/
+
+
+
+/*--------------------------------ASK 4 (3 COLUMN με χρηση media rule)-------------------------------------------*/
+
+
+/*--------------------------------laptops or desktops, 992px and up-------------------------------------------*/
+@media screen and (min-width: 992px) {
+ 
+    .product-list,
+    .product-categories-div {
+        margin-top: 3%;/*ask 4 precenteges*/
+        display: grid;
+        grid-template-columns:1fr 1fr 1fr;/*ask 4 χρηση fr για 3 column*/     
+        grid-gap: 40px 40px;
+        grid-auto-rows: max-content;
+    }
+
+    .product-info {
+        display: grid;
+        grid-template-columns:3fr 2fr 1fr; /* ask4 χρηση fr για 3 column*/ 
+        align-items: center;
+    }
+
+    .description {
+        display: grid;
+        width: 80%; /*ask 4 precenteges*/
+        grid-template-columns:1fr 1fr 1fr;/* ask4 χρηση fr για 3 column*/                      
+        align-items: center;
+    }
+    .description  iframe {
+        justify-self: right;
+        max-width: 100%;/* ask4 χρηση του κανονα max-width*/ 
+        grid-column: 2/4;
+    }
+
+    .component-description {
+        width: 80%; /*ask 4 precenteges*/
+        display: grid;
+        grid-template-columns:1fr 1fr 1fr;/* ask4 χρηση fr για 3 column*/                    
+        grid-template-rows: 10% 1fr 1fr;  /*ask 4 precenteges και fr*/
+        align-items: center;
+        border-width: 1px 0px 0px 0px;
+        border-style: solid;
+        border-color: var(--blue);
+    }
+
+    .component-description > h4 {
+        color:var(--blue);
+        font-style: italic;
+        text-shadow: 2px 1px  rgb(0, 0, 0);
+        text-align: center;
+        font-size: 1.5em;
+    
+        grid-column: 2/3;  /*ask 4 χρηση 3 column και grid-column-start/end*/
+        grid-row: 1fr 3fr 1fr 2fr; /*ask 4 χρηση fr*/
+    }
+    
+    .component-description > img {
+        grid-column: 1/3;  
+        grid-row: 2/4;
+        max-width: 100%;/* ask4 χρηση του κανωνα max-width*/ 
+        justify-self: left;
+    }
+    
+    .component-description > pre {
+        grid-column: 3/4;   /*ask 4 χρηση 3 column και grid-column-start/end*/
+        grid-row: 2/3; /*ask 4 χρηση fr*/
+    }
+    
+    .component-description > p {
+        grid-column: 3/4;/*ask 4 χρηση 3 column και grid-column-start/end*/
+        grid-row: 3/4;
+        align-self: start;
+    }
+
+
+    /*Ανά 2 εικόνες αλλάζουμε και τη θέση της εικόνας από δεξια-αριστερα και αντιστροφα !!δεν γινεταi στo 1 column*/
+    .component-description:nth-child(even) > img {
+        grid-column: 2/4;/*ask 4 χρηση 3 column και grid-column-start/end*/
+        justify-self: right;
+    }
+
+    .component-description:nth-child(even) > pre {
+        grid-column: 1/2;
+    }
+
+    .component-description:nth-child(even) > p {
+        grid-column: 1/2;
+    }
+
+    .bio {
+        display: flex;
+        flex-direction: row; /*changed to row για τα 3 column */
+        justify-content: space-evenly;
+    }
+
+}
