--- a/WikiShop/public/css/style.css
+++ b/WikiShop/public/css/style.css
@@ -1,4 +1,4 @@
-/*Αρρχικοποίηση μεταβλητής για το βασικό χρώμα που θα χρησιμοποιηθεί στις ιστοσελίδες*/
+/*Αρχικοποίηση μεταβλητής για το βασικό χρώμα που θα χρησιμοποιηθεί στις ιστοσελίδες*/
 :root {
     --blue: #127b88;
 }
@@ -103,6 +103,7 @@ footer {
 }
 
 #product-list li {
+    display: grid;
     list-style-type: none;
     border-radius: 20px;
     padding: 10px;
@@ -127,3 +128,144 @@ b {
     text-shadow: 0px 1px;
 }
 
+#sub-category-select {
+    border-radius: 12px;
+    border: 2px solid #2d9fd9;
+    width: 7%;
+    height: 30px;
+    text-align: center;
+}
+
+#filter {
+    display: flex;
+    justify-content: center;
+    margin-top: 3em;
+}
+
+* {
+    box-sizing: border-box;
+  }
+  
+/* Button used to open the contact form - fixed at the bottom of the page */
+#open-button, #log-out {
+    background-color: #37aab9;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.7;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: auto;
+}
+  
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+      position: fixed;
+      left: 50%;
+      top: 20%;
+      transform: translate(-50%, 5%);
+      border: 3px solid #999999;
+      z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, #open-button:hover, #add-to-cart:hover {
+  opacity: 1;
+}
+
+#login-div b {
+  color: #000;
+  font-style: normal;
+}
+
+#log-out {
+    display: none;
+}
+
+#invalid_data {
+    font-family: paragraphFont;
+    font-weight: normal;
+    color: red;
+}
+
+#add-to-cart {
+    background-color: var(--blue);
+    color: white;
+    padding: 16px 20px;
+    font-size: medium;
+    border: none;
+    cursor: pointer;
+    opacity: 0.7;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 0px;
+}
+
+table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  table td, table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  table tr:nth-child(even){background-color: #f2f2f2;}
+  
+  table tr:hover {background-color: #ddd;}
+  
+  table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: var(--blue);
+    color: white;
+  }
+  
+  table tr {
+    text-align: center;
+  }
